# amplifier-bundle-a2a

./: AGENTS.md  KNOWN_ISSUES.md  README.md  SMOKE_TESTS.md
.amplifier/digital-twin-universe/profiles/: a2a-smoke.yaml
.github/: PULL_REQUEST_TEMPLATE.md
behaviors/: a2a.yaml
context/: a2a-guide.md  a2a-instructions.md  a2a-setup-guide.md
docs/: RUNNING_ON_WSL2.md
docs/plans/: 2026-02-23-a2a-config-improvements-implementation.md
modes/: a2a-setup.md  a2a.md
modules/hooks-a2a-server/: pyproject.toml
modules/hooks-a2a-server/amplifier_module_hooks_a2a_server/: __init__.py  card.py  discovery.py  registry.py
modules/hooks-a2a-server/tests/: test_card.py  test_discovery.py  test_registry.py  test_server.py
modules/tool-a2a/: pyproject.toml
modules/tool-a2a/amplifier_module_tool_a2a/: __init__.py  discovery.py
modules/tool-a2a/tests/: test_tool_a2a.py  test_tool_a2a_discovery.py
tests/: test_integration_config.py
