[project]
name = "amplifier-module-tool-a2a"
version = "0.1.0"
description = "A2A protocol client tool — send messages to remote agents"
requires-python = ">=3.11"
# zeroconf is required for mDNS/LAN discovery (a2a(operation="discover")).
# Declared here so `amplifier bundle add` installs it automatically and LAN
# discovery works out of the box instead of silently returning no agents.
dependencies = ["aiohttp>=3.9.0", "zeroconf>=0.100.0"]

[project.entry-points."amplifier.modules"]
tool-a2a = "amplifier_module_tool_a2a:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_a2a"]
